--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "firebase": "^9.8.3",
+    "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.5",
     "recharts": "^2.1.10",
     "redux": "^4.2.0",
     "redux-api-call": "^1.2.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.52.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
